--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -180,9 +180,9 @@
       <a href="#" class="icono2">
         <i class="fas fa-search"></i>
       </a>
-      <a href="#" class="icono2">
+      <a href="/carrito" class="icono2">
         <i class="fas fa-shopping-cart"></i>
-        <span class="badge">3</span>
+        <span id="contador-carrito" class="badge"></span>
       </a>
       <a href="#" class="icono2">
         <i class="fas fa-user"></i>
@@ -191,5 +191,7 @@
     <%- include('partials/bot') %>
 
     <%- include('partials/footer') %>
+
+    <script src="/js/carrito.js"></script>
   </body>
 </html>
