--- a/src/public/index.css
+++ b/src/public/index.css
@@ -109,5 +109,20 @@
   color: #ED9544;
 }
 
+.badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
