--- a/src/public/menu.css
+++ b/src/public/menu.css
@@ -304,6 +304,20 @@
 .icono2:hover {
   color: #ed9544;
 }
+.badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .custom-img-height {
   height: 500px; /* Ajusta la altura de la imagen */
