integrar apis global

--- a/src/views/promociones.ejs
+++ b/src/views/promociones.ejs
@@ -29,7 +29,7 @@
     <script>
       async function getPlatos() {
         try {
-          const response = await fetch("http://localhost:3000/api/get-platos", {
+          const response = await fetch("https://peruanitopage.onrender.com/api/get-platos", {
             method: "GET",
             headers: {
               "Content-Type": "application/json",
